First commit for HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<p>NICKY</p>
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<title>What I Ate Yesterday</title>
+	<head>
+
+	<body>
+		<article>
+		<header>
+		<h2>What did I eat yesterday and why would you care?</h2>
+		<p>You probably don't. I have a severe dairy allergy if that makes you more interested.</p>
+		<header>
+		<article>
+
+
+		
+		<main>
+		<article>
+		<h3>Bagel and smoothie</h3>
+		<h1>Ingredients</h1>
+		<p>Bagel, non-dairy butter spread, Naked Strawberry and Banana smoothie</p>
+		<img src="butter.jpg" alt="This is the dairy-free one I like"> 
+		<h1>Preperation Notes</h1>
+		<p>The trick to making a crisp &apos;buttered&apos; bagel in the toaster is to butter your bagel <b>before</b> you put it in the toaster<p>
+		</article>
+
+		<article>
+		<h3>Leftover Chicken Lo-mein</h3>
+		<h1>Ingredients</h1>
+		<p>leftover chinese delivery from the night before, because we all know that I ordered too much</p>
+		<h1>Preperation Notes</h1>
+		<p>Don't microwave styrofoam</p>
+		</article>
+
+		<article>
+		<h3>Chicken Taco Salad</h3>
+		<h1>Ingredients</h1>
+		<p>crock-pot chicken, chips, lettuce, salsa, corn pico</p>
+		<h1>Preperation Notes</h1>
+		<p>slow cook your chicken on low for 4-5 hours with 1/2 c. chicken stock and 1T. taco seasoning for each chicken breast.</p>
+		<p>remove your whole chicken breasts from broth once they're done cooking and use your tongs and a fork to shred it.</p>
+		</article>
+
+		<article>
+		<h3>Turkey Sandwich and Oreos</h3>
+		<h1>Ingredients</h1>
+		<p>Sliced white bread, deli turkey, mayo, origional lays chips, oreos</p>
+		<h1>Preperation Notes</h1>
+		<p>Add chips to your sandwich for a more pleasant eating experience.</p>
+		<img src="bread.jpg" alt="I make my own bread to ensure that it's dairy free. Kneading the bread also provides some stress relief."> 
+		</article>
+		</main>
+
+		<footer>
+		<p>everything I've stated in the above text is true, although I cannot prove it because it's in my belly now &lt;3.</p>
+		</footer>
+	</body>
+</html>
