--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>What I Ate Yesterday</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	<head>
 
 	<body>
